--- a/blogadmin/package.json
+++ b/blogadmin/package.json
@@ -21,8 +21,13 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@types/aos": "^3.0.4",
+    "@types/quill": "^1.3.10",
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^13.0.0",
+    "ngx-quill": "^15.0.0",
+    "quill": "^1.3.7",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-emoji": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
