--- a/blogadmin/angular.json
+++ b/blogadmin/angular.json
@@ -30,11 +30,13 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "./node_modules/quill/dist/quill.core.css",
-            "./node_modules/quill/dist/quill.bubble.css",
-            "./node_modules/quill/dist/quill.snow.css",
+              "./node_modules/quill/dist/quill.bubble.css",
+              "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill-emoji/dist/quill-emoji.css"
             ],
-            "scripts": ["./node_modules/quill/dist/quill.min.js"]
+            "scripts": [
+              "./node_modules/quill/dist/quill.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -103,6 +105,16 @@
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "blogadmin:build:production",
+            "firebaseProject": "zoey-s-blog",
+            "firebaseHostingSite": "zoey-s-blog"
           }
         }
       }
