--- a/blogadmin/package.json
+++ b/blogadmin/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~12.2.0",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.2.0",
@@ -25,6 +26,7 @@
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^13.0.0",
     "ngx-quill": "^15.0.0",
+    "ngx-quill-upload": "^2.0.0",
     "quill": "^1.3.7",
     "quill-blot-formatter": "^1.0.5",
     "quill-emoji": "^0.2.0",
