--- a/blogadmin/angular.json
+++ b/blogadmin/angular.json
@@ -32,7 +32,8 @@
               "./node_modules/quill/dist/quill.core.css",
               "./node_modules/quill/dist/quill.bubble.css",
               "./node_modules/quill/dist/quill.snow.css",
-              "./node_modules/quill-emoji/dist/quill-emoji.css"
+              "./node_modules/quill-emoji/dist/quill-emoji.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [
               "./node_modules/quill/dist/quill.min.js"
