--- a/blogadmin/package.json
+++ b/blogadmin/package.json
@@ -21,12 +21,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@types/aos": "^3.0.4",
     "@types/quill": "^1.3.10",
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^13.0.0",
     "ngx-quill": "^15.0.0",
     "ngx-quill-upload": "^2.0.0",
+    "ngx-spinner": "^13.1.1",
     "quill": "^1.3.7",
     "quill-blot-formatter": "^1.0.5",
     "quill-emoji": "^0.2.0",
