--- a/blogadmin/package.json
+++ b/blogadmin/package.json
@@ -29,6 +29,7 @@
     "ngx-spinner": "^13.1.1",
     "quill": "^1.3.7",
     "quill-blot-formatter": "^1.0.5",
+    "quill-blot-formatter-mobile": "^1.1.1",
     "quill-emoji": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
