--- a/blogUser/package.json
+++ b/blogUser/package.json
@@ -30,7 +30,7 @@
     "masonry-layout": "^4.2.2",
     "ngx-masonry": "^13.0.0",
     "ngx-quill": "^15.0.0",
-    "ngx-spinner": "^13.1.1",
+    "ngx-ui-loader": "^11.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
